# aspire

./: .gitignore  README.md  aspire_carte.ipynb  aspire_finetuning.ipynb  aspire_quickstart.ipynb  pyproject.toml  requirements.txt
datasets/: heart-c.csv  metadata_pet_wellness_programs_example.json  metadata_pet_wellness_programs_example_pd.json  synthetic_pet_wellness_programs_example.csv
src/aspire/: __init__.py  aspire.py  data_loader.py  model.py  wrapper.py
