[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aspire"
version = "0.1"
description = "ASPIRE — Arbitrary Set-based Permutation-Invariant Reasoning Engine"
readme = "README.md"
authors = [
  { name = "Shreyas Bhat Brahmavar" },
  { name = "Yang Li" },
  { name = "Junier Oliva" },
]
license = {text = "CC BY-NC 4.0"}
requires-python = ">=3.9"
dependencies = [
  "torch>=2.1",
  "transformers>=4.44",
  "huggingface_hub>=0.24",
  "numpy>=1.24",
  "pandas>=2.0",
  "scikit-learn>=1.3",
  "tqdm",
]

[project.urls]
Homepage = "https://github.com/placeholder"

[tool.setuptools.packages.find]
where = ["src"]
